force-app/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <description>Describe what kind of experience does an Employee have</description>
    <label>Experience</label>
    <nameField>
        <displayFormat>E-{000}</displayFormat>
        <label>Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>