force-app/main/default/objects/Experience__c/fields/Comapny__c.field-meta.xml
<CustomField>
    <fullName>Comapny__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comapny</label>
    <referenceTo>Comapny__c</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>