force-app/main/default/objects/Experience__c/fields/Deployment_Tools__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Tools__c</fullName>
    <label>Deployment Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Azure DevOps</fullName>
            </value>
            <value>
                <fullName>Bitbucket</fullName>
            </value>
            <value>
                <fullName>Blue Canvas</fullName>
            </value>
            <value>
                <fullName>Change Sets</fullName>
            </value>
            <value>
                <fullName>Copado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>