force-app/main/default/objects/Experience__c/fields/Experience_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Experience_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience Cloud</label>
    <type>Checkbox</type>
</CustomField>