force-app/main/default/objects/Experience__c/fields/Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>