force-app/main/default/objects/Experience__c/fields/Period_worked__c.field-meta.xml
<CustomField>
    <fullName>Period_worked__c</fullName>
    <formula>If(
 Currently_working_here__c = false,
TEXT((YEAR(End_Date__c) - Year(Start_Date__c))) &amp; If((YEAR(End_Date__c) - Year(Start_Date__c))&gt;1, &apos; Years &apos;,&apos; Year &apos;) + TEXT((Month(End_Date__c) - Month(Start_Date__c))) &amp; If((Month(End_Date__c) - Month(Start_Date__c))&gt;1,&apos; Months&apos;,&apos; Month&apos;),
TEXT((YEAR( TODAY()) - Year(Start_Date__c))) &amp; If((YEAR(TODAY()) - Year(Start_Date__c))&gt;1, &apos; Years &apos;,&apos; Year &apos;) + TEXT((Month(TODAY()) - Month(Start_Date__c))) &amp; If((Month(TODAY()) - Month(Start_Date__c))&gt;1,&apos; Months&apos;,&apos; Month&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period worked</label>
    <type>Text</type>
</CustomField>