force-app/main/default/objects/Experience__c/fields/Query_Languages__c.field-meta.xml
<CustomField>
    <fullName>Query_Languages__c</fullName>
    <label>Query Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>SOSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>