force-app/main/default/objects/Experience__c/fields/Sales_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Cloud</label>
    <type>Checkbox</type>
</CustomField>