force-app/main/default/objects/Experience__c/fields/Salesforce_Cloud_Used__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Cloud_Used__c</fullName>
    <label>Salesforce Cloud Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Financial Cloud</fullName>
            </value>
            <value>
                <fullName>Data Cloud</fullName>
            </value>
            <value>
                <fullName>AI Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>