force-app/main/default/objects/Experience__c/fields/Salesforce_Experience__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Experience__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Salesforce Experience</label>
    <type>Checkbox</type>
</CustomField>