force-app/main/default/objects/Experience__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public_Sector</fullName>
                <color>#0B6FCE</color>
                <label>Public Sector</label>
            </value>
            <value>
                <fullName>Financial_Industry</fullName>
                <label>Financial Industry</label>
            </value>
            <value>
                <fullName>Health_Care</fullName>
                <label>Health Care</label>
            </value>
            <value>
                <fullName>Entertainment_and_Gaming</fullName>
                <label>Entertainment and Gaming</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>