force-app/main/default/objects/Experience__c/fields/Service_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Service_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Cloud</label>
    <type>Checkbox</type>
</CustomField>