force-app/main/default/objects/Experience__c/fields/Years_worked__c.field-meta.xml
<CustomField>
    <fullName>Years_worked__c</fullName>
    <formula>If(
Currently_working_here__c = false,
(((YEAR(End_Date__c) - YEAR(Start_Date__c))*12) + (MONTH(End_Date__c) - MONTH(Start_Date__c)))/12,
(((YEAR(TODAY()) - YEAR(Start_Date__c))*12) + (MONTH(TODAY()) - MONTH(Start_Date__c)))/12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>